[package]
authors = ["Yannik Rist"]
autoexamples = false
categories = ["algorithms", "api-bindings", "mathematics", "science"]
description = "A Rust API for Gurobi optimizer"
#documentation = "https://docs.rs/gurobi/0.3.4/gurobi/"
edition = "2018"
keywords = ["optimization", "linear", "integer"]
license = "MIT"
name = "grb"
repository = "https://github.com/ykrist/rust-grb"
version = "0.1.0"
build = "build/main.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex-header.html" ]

[dependencies]
fnv = "^1.0"
anyhow = "^1.0"
cstr-enum = "^1.0"
grb-sys = {path = "./grb-sys", version="0.1.0" }
grb-macro = {path= "./grb-macro", version="0.1.0" }

[dev-dependencies]
proptest = "^0.10"
trybuild = "^1.0"
gag = "^0.1"

[build-dependencies]
anyhow = "^1.0"
codegen = "^0.1"
csv = "^1.1"


[[example]]
name = "callback"
path = "examples/callback.rs"

[[example]]
name = "facility"
path = "examples/facility.rs"

[[example]]
name = "mip"
path = "examples/mip.rs"

[[example]]
name = "piecewise"
path = "examples/piecewise.rs"

[[example]]
name = "qcp"
path = "examples/qcp.rs"

[[example]]
name = "qp"
path = "examples/qp.rs"

[[example]]
name = "sensitivity"
path = "examples/sensitivity.rs"

[[example]]
name = "sos"
path = "examples/sos.rs"

[[example]]
name = "tune"
path = "examples/tune.rs"

[[example]]
name = "workforce1"
path = "examples/workforce1.rs"

[[example]]
name = "workforce2"
path = "examples/workforce2.rs"

[[example]]
name = "workforce3"
path = "examples/workforce3.rs"
