[package]
name = "grb-macro"
version = "0.1.0"
edition = "2018"
license = "MIT"
homepage = "https://github.com/ykrist/rust-grb/"
repository = "https://github.com/ykrist/rust-grb/"
description = "Procedural macros for the grb crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits", "printing", "parsing"] }
quote = "^1.0"
proc-macro2 = "*"

[dev-dependencies]
grb = { path="../" }
