[package]
name = "grb-proc-macro"
version = "0.1.0"
authors = ["yanni_rist <yanni555rist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits", "printing", "parsing"] }
quote = "^1.0"
gurobi = "0.3.*"
proc-macro2 = "*"
