[package]
name = "grb-sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"
license = "MIT"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
description = "Gurobi C API FFI declarations."
homepage = "https://github.com/ykrist/rust-grb/"
repository = "https://github.com/ykrist/rust-grb/"
