[package]
name = "grb-sys2"
version = "10.1.0"
edition = "2018"
build = "build.rs"
license = "MIT"
links = "gurobi"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
description = "Gurobi C API FFI declarations."
homepage = "https://github.com/ykrist/rust-grb/"
repository = "https://github.com/ykrist/rust-grb/"

[build-dependencies]
anyhow = "1.0.83"

[dependencies]
anyhow = { version = "1.0.83", optional = true }

[features]
build_script_tests = ["anyhow"]
