[package]
name = "gurobi-sys"
version = "0.1.3"
authors = ["Yusuke Sasaki <y_sasaki@nuem.nagoya-u.ac.jp>"]
description = "Unofficial low-level FFI bindings for Gurobi C API"
license = "MIT"
repository = "https://github.com/ys-nuem/rust-gurobi.git"
documentation = "https://ys-nuem.github.io/rust-gurobi/gurobi_sys/index.html"

build = "build.rs"
